Updated almost all images and change icons.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Glozzom Theme</title>
+  <title>Osenburg Electric</title>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.css" />
@@ -21,7 +21,7 @@
             <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">About Us</a>
+            <a href="#home-heading" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
             <a href="services.html" class="nav-link">Services</a>
@@ -46,9 +46,8 @@
         <div class="carousel-item carousel-image-1 active">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-right mb-5">
-              <h1 class="display-3">Heading One</h1>
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
-              <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a>
+              <h1 class="display-3">Residential</h1>
+              <a href="#home-icons" class="btn btn-danger btn-lg">Learn More</a>
             </div>
           </div>
         </div>
@@ -56,19 +55,17 @@
         <div class="carousel-item carousel-image-2">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block mb-5">
-              <h1 class="display-3">Heading Two</h1>
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
-              <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+              <h1 class="display-3">Commerical</h1>
+              <a href="#home-icons" class="btn btn-primary btn-lg">Learn More</a>
             </div>
           </div>
         </div>
 
-        <div class="carousel-item carousel-image-2">
+        <div class="carousel-item carousel-image-3">
           <div class="container">
-            <div class="carousel-caption d-none d-sm-block text-right mb-5">
-              <h1 class="display-3">Heading Three</h1>
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae consequuntur architecto eius magni nobis nulla eaque. Deserunt sunt, distinctio quos.</p>
-              <a href="#" class="btn btn-success btn-lg">Learn More</a>
+            <div class="carousel-caption d-none d-sm-block text-left mb-5 text-light">
+              <h1 class="display-3">Solar</h1>
+              <a href="#home-icons" class="btn btn-success btn-lg">Learn More</a>
             </div>
           </div>
         </div>
@@ -89,19 +86,19 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4 text-center">
-          <i class="fa fa-cog mb-2"></i>
-          <h3>Turning Gears</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
+          <i class="fa fa-home mb-2"></i>
+          <h3>Residential Services</h3>
+          <p>Provide a range of services, from swimming pools and home additions to security and home entertainment systems.</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
-          <i class="fa fa-cloud mb-2"></i>
-          <h3>Sending Data</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
+          <i class="fa fa-building mb-2"></i>
+          <h3>Commerical Services</h3>
+          <p>Perform large build-outs for many companies in the Baltimore-Metro area and provide continual maintenance for their facilities.</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
-          <i class="fa fa-cart-plus mb-2"></i>
-          <h3>Making Money</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, maxime.</p>
+          <i class="fa fa-sun-o mb-2"></i>
+          <h3>Renewable Energy</h3>
+          <p>We believe renewable energy is important. We have extensive experience in both commerical and residential renewable energy construction.</p>
         </div>
       </div>
     </div>
@@ -113,8 +110,8 @@
       <div class="row">
         <div class="col">
           <div class="container pt-5">
-            <h1>Are You Ready To Get Started?</h1>
-            <p class="d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita voluptates, consequatur labore placeat doloremque dignissimos exercitationem esse fuga laborum ex!</p>
+            <h1>About Us</h1>
+            <p class="d-none d-md-block">Osenburg Electric strives to be the best electrical contractor in Fallston, Maryland and all of Harford County, Maryland. Customer service is our highest priority, with a goal to give each customer the greatest level of service they have ever experienced.</p>
           </div>
         </div>
       </div>
@@ -126,32 +123,23 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 align-self-center">
-          <h3>Lorem Ipsum</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, dolorum?</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae eaque quos eligendi, laboriosam. Culpa consequuntur illum facere id molestias.</p>
-          <a href="#" class="btn btn-outline-danger btn-lg">Learn More</a>
+          <a href="#" class="btn btn-outline-danger btn-lg">Contact Us</a>
         </div>
         <div class="col-md-6">
-          <img src="img/laptop.png" class="img-fluid" alt="">
+          <img src="img/thoughtBubble.jpg" class="img-fluid" alt="">
         </div>
       </div>
     </div>
   </section>
 
-  <!-- VIDEO PLAY SECTION -->
+  <!-- See what we do section -->
   <section id="video-play">
     <div class="dark-overlay">
       <div class="row">
         <div class="col">
           <div class="container p-5">
-            <a
-              href="#"
-              class="video"
-              data-video="https://www.youtube.com/embed/HnwsG9a5riA"
-              data-toggle="modal"
-              data-target="#videoModal"
-            >
-              <i class="fa fa-play"></i>
-            </a>
             <h1>See What We Do</h1>
           </div>
         </div>
@@ -165,37 +153,37 @@
       <h1 class="text-center">Photo Gallery</h1>
       <p class="text-center">Check out our photos</p>
       <div class="row mb-4">
-        <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/1" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/1" class="img-fluid">
+        <div class="col-md-4"> 
+          <a href="img/jt.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/jt.jpg" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/2" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/2" class="img-fluid">
+          <a href="img/metal.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/metal.jpg" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/3" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/3" class="img-fluid">
+          <a href="img/deskLights.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/deskLights.jpg" class="img-fluid">
           </a>
         </div>
       </div>
 
       <div class="row mb-4">
         <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/4" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/4" class="img-fluid">
+          <a href="img/secondWall.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/secondWall.jpg" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
-          <a href="http://lorempixel.com/600/600/business/5" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/5" class="img-fluid">
+          <a href="img/livingRoom.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/livingRoom.jpg" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/6" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/6" class="img-fluid">
+          <a href="img/SamuelLights.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/SamuelLights.jpg" class="img-fluid">
           </a>
         </div>
       </div>
@@ -226,7 +214,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <p>Copyright 2017 &copy; Glozzom</p>
+          <p>Copyright 2017 &copy; Osenburg Electric</p>
         </div>
       </div>
     </div>
