Removed unneeded html files and fixed the call and email links at the bottom.

--- a/src/index.html
+++ b/src/index.html
@@ -256,13 +256,7 @@
           <p>Copyright 2018 &copy; Osenburg Electric</p>
         </div>
       </div>
-      <div class="row">
-          <div class="col-md-6 text-right">
-              <p class="mb-0"><a href="tel:+4109352061" class="mb-0">Call Us</a></p>
-          </div>
-          <div class="col-md-6 text-left">
-            <p class="mb-0"><a href="mailto:gosenburg@osenburgelectric.com" target="_top">Email Us</a></p>
-          </div>
+        <p class="mb-0"><a href="tel:+4109352061" class="mb-0">Call</a> or <a href="mailto:gosenburg@osenburgelectric.com" target="_top">Email</a></p>
       </div>
     </div>
   </footer>
