--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,15 @@
   <link rel="stylesheet" href="css/slick.css">
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
-<body>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<body id="home">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
       <a href="index.html" class="navbar-brand">Osenburg Electric</a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a href="index.html" class="nav-link">Home</a>
+            <a href="#home" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#services-section" class="nav-link">Services</a>
@@ -267,5 +267,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.js"></script>
   <script src="js/slick.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/navbar-fixed.js"></script>
 </body>
 </html>
