Added contact section

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             <a href="#about-heading" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
-            <a href="#main-footer" class="nav-link">Contact</a>
+            <a href="#contact" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
@@ -217,7 +217,29 @@
     </div>
   </section>
 
+    <!-- Contact  -->
+    <section id="contact">
+      <div class="dark-overlay d-none d-sm-block">
+        <div class="row">
+          <div class="col">
+            <div class="container p-5">
+              <h1>Contact Us</h1>
+              <div class="row">
+                <div class="col-sm-6 text-center">
+                  <a href="tel:+4109352061" class="btn btn-outline-primary btn-lg">Call Us</a>
+                </div>
+                <div class="col-sm-6 text-center">
+                  <a href="mailto:gosenburg@osenburgelectric.com" class="btn btn-outline-primary btn-lg">Email Us</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   <!-- TESTIMONIALS -->
+  <!--
   <section id="testimonial-section" class="p-4 bg-dark text-white">
     <div class="container">
       <h2 class="text-center">Testimonials</h2>
@@ -247,7 +269,7 @@
       </div>
     </div>
   </section>
-
+-->
 
   <footer id="main-footer" class="text-center p-4">
     <div class="container">
@@ -255,8 +277,6 @@
         <div class="col">
           <p>Copyright 2018 &copy; Osenburg Electric</p>
         </div>
-      </div>
-        <p class="mb-0"><a href="tel:+4109352061" class="mb-0">Call</a> or <a href="mailto:gosenburg@osenburgelectric.com" target="_top">Email</a></p>
       </div>
     </div>
   </footer>
