Finsihed contact section and changed background overlay. Need to decide what to do with call and email. Also commented out testimonials.

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="col text-center">
-        <a href="#main-footer" class="btn btn-outline-danger btn-lg">Contact Us</a>
+        <a href="#contact" class="btn btn-outline-danger btn-lg">Contact Us</a>
       </div>
     </div>
   </section>
@@ -226,10 +226,10 @@
               <h1>Contact Us</h1>
               <div class="row">
                 <div class="col-sm-6 text-center">
-                  <a href="tel:+4109352061" class="btn btn-outline-primary btn-lg">Call Us</a>
+                  <a href="tel:+4109352061" class="btn btn-outline-primary btn-lg">Call</a>
                 </div>
                 <div class="col-sm-6 text-center">
-                  <a href="mailto:gosenburg@osenburgelectric.com" class="btn btn-outline-primary btn-lg">Email Us</a>
+                  <a href="mailto:gosenburg@osenburgelectric.com" class="btn btn-outline-primary btn-lg">Email</a>
                 </div>
               </div>
             </div>
