--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Bootstrap Theme</title>
+  <title>Osenburg Electric</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Glozzom</a>
+      <a href="index.html" class="navbar-brand">Osenburg Electric</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -56,8 +56,8 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-right mb-5">
               <h1 class="display-3">Heading One</h1>
-              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis ratione
-                quod aliquid inventore vero perspiciatis.</p>
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
+                ratione quod aliquid inventore vero perspiciatis.</p>
               <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a>
             </div>
           </div>
@@ -67,8 +67,8 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block mb-5">
               <h1 class="display-3">Heading Two</h1>
-              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis ratione
-                quod aliquid inventore vero perspiciatis.</p>
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
+                ratione quod aliquid inventore vero perspiciatis.</p>
               <a href="#" class="btn btn-primary btn-lg">Learn More</a>
             </div>
           </div>
@@ -78,8 +78,8 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-right mb-5">
               <h1 class="display-3">Heading Three</h1>
-              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis ratione
-                quod aliquid inventore vero perspiciatis.</p>
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
+                ratione quod aliquid inventore vero perspiciatis.</p>
               <a href="#" class="btn btn-success btn-lg">Learn More</a>
             </div>
           </div>
@@ -101,18 +101,18 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cog fa-3x mb-2"></i>
-          <h3>Turning Gears</h3>
+          <i class="fas fa-home fa-3x mb-2"></i>
+          <h3>Residential</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cloud fa-3x mb-2"></i>
-          <h3>Sending Data</h3>
+          <i class="fas fa-building fa-3x mb-2"></i>
+          <h3>Commercial</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cart-plus fa-3x mb-2"></i>
-          <h3>Making Money</h3>
+          <i class="fas fa-sun fa-3x mb-2"></i>
+          <h3>Solar</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
         </div>
       </div>
@@ -125,9 +125,7 @@
       <div class="row">
         <div class="col">
           <div class="container pt-5">
-            <h1>Are You Ready To Get Started?</h1>
-            <p class="d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est eaque magni sit dolores. Nisi, dolor nam modi perspiciatis
-              consequatur soluta.</p>
+            <h1>Are You Looking For Someone To Meet Your Electrical Needs?</h1>
           </div>
         </div>
       </div>
@@ -140,12 +138,12 @@
       <div class="row">
         <div class="col-md-6 align-self-center">
           <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eveniet blanditiis incidunt iusto corrupti illum
-            cum laudantium ex sequi amet.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eveniet blanditiis incidunt iusto corrupti
+            illum cum laudantium ex sequi amet.</p>
           <a href="about.html" class="btn btn-outline-danger btn-lg">Learn More</a>
         </div>
         <div class="col-md-6">
-          <img src="img/laptop.png" alt="" class="img-fluid">
+          <img src="img/DeckStepsResize.jpg" alt="" class="img-fluid">
         </div>
       </div>
     </div>
