--- a/about.html
+++ b/about.html
@@ -12,13 +12,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Bootstrap Theme</title>
+  <title>Osenburg Electric</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Glozzom</a>
+      <a href="index.html" class="navbar-brand">Osenburg Electric</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -62,17 +62,23 @@
       <div class="row">
         <div class="col-md-6">
           <h1>What We Do</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, fuga eaque. Amet, assumenda aliquid tempore dolorum
-            error eveniet doloribus sed repellat quod, dolores fuga ipsam soluta. Aliquam accusantium pariatur aut sint deleniti
-            laborum ducimus voluptatem? Architecto cumque quod suscipit officiis soluta, voluptate dicta blanditiis similique
-            praesentium temporibus adipisci debitis labore!</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, fuga eaque. Amet, assumenda aliquid tempore dolorum
-            error eveniet doloribus sed repellat quod, dolores fuga ipsam soluta. Aliquam accusantium pariatur aut sint deleniti
-            laborum ducimus voluptatem? Architecto cumque quod suscipit officiis soluta, voluptate dicta blanditiis similique
-            praesentium temporibus adipisci debitis labore!</p>
+          <ul>
+            <li>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, fuga eaque. Amet, assumenda aliquid tempore
+                dolorum error eveniet doloribus sed repellat quod, dolores fuga ipsam soluta. Aliquam accusantium pariatur
+                aut sint deleniti laborum ducimus voluptatem? Architecto cumque quod suscipit officiis soluta, voluptate
+                dicta blanditiis similique praesentium temporibus adipisci debitis labore!</p>
+            </li>
+            <li>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, fuga eaque. Amet, assumenda aliquid tempore
+                dolorum error eveniet doloribus sed repellat quod, dolores fuga ipsam soluta. Aliquam accusantium pariatur
+                aut sint deleniti laborum ducimus voluptatem? Architecto cumque quod suscipit officiis soluta, voluptate
+                dicta blanditiis similique praesentium temporibus adipisci debitis labore!</p>
+            </li>
+          </ul>
         </div>
-        <div class="col-md-6">
-          <img src="https://source.unsplash.com/random/700x700/?technology" alt="" class="img-fluid rounded-circle d-none d-md-block about-img">
+        <div class="col-md-6 pt-5">
+          <img src="./img/Kneeling.jpg" alt="" class="img-fluid rounded-circle d-none d-md-block about-img">
         </div>
       </div>
     </div>
@@ -192,7 +198,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year"></span> Glozzom</p>
+            <span id="year"></span> Osenburg Electric</p>
         </div>
       </div>
     </div>
