--- a/services.html
+++ b/services.html
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <title>Bootstrap Theme</title>
+  <title>Osenburg Electric</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Glozzom</a>
+      <a href="index.html" class="navbar-brand">Osenburg Electric</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,9 +30,6 @@
           </li>
           <li class="nav-item active">
             <a href="services.html" class="nav-link">Services</a>
-          </li>
-          <li class="nav-item">
-            <a href="blog.html" class="nav-link">Blog</a>
           </li>
           <li class="nav-item">
             <a href="contact.html" class="nav-link">Contact</a>
@@ -58,45 +55,44 @@
   <section id="services" class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="card text-center">
             <div class="card-header bg-dark text-white">
-              <h3>Service Plan One</h3>
+              <h3>Residential Services</h3>
             </div>
             <div class="card-body">
-              <h4 class="card-title">$59.99/Month</h4>
+              <h4 class="card-title">Homes</h4>
               <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, quis.</p>
               <ul class="list-group">
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature One
+                  <i class="fas fa-check"></i> Pools/Spas
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Two
+                  <i class="fas fa-check"></i> Finished Basements
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Three
+                  <i class="fas fa-check"></i> Smart Homes
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Four
+                  <i class="fas fa-check"></i> Security Cameras
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Five
+                  <i class="fas fa-check"></i> Kitchen Remodels
                 </li>
               </ul>
-              <a href="#" class="btn btn-danger btn-block mt-2">Get It</a>
+              <a href="contact.html" class="btn btn-danger btn-block mt-2">Contact Us</a>
             </div>
             <div class="card-footer text-muted">
-              1 Year Plan
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="card text-center">
             <div class="card-header bg-dark text-white">
-              <h3>Service Plan Two</h3>
+              <h3>Commercial Services</h3>
             </div>
             <div class="card-body">
-              <h4 class="card-title">$99.99/Month</h4>
+              <h4 class="card-title">Businesses</h4>
               <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, quis.</p>
               <ul class="list-group">
                 <li class="list-group-item">
@@ -115,42 +111,9 @@
                   <i class="fas fa-check"></i> Feature Five
                 </li>
               </ul>
-              <a href="#" class="btn btn-danger btn-block mt-2">Get It</a>
+              <a href="contact.html" class="btn btn-danger btn-block mt-2">Contact Us</a>
             </div>
             <div class="card-footer text-muted">
-              1 Year Plan
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card text-center">
-            <div class="card-header bg-dark text-white">
-              <h3>Service Plan Three</h3>
-            </div>
-            <div class="card-body">
-              <h4 class="card-title">$129.99/Month</h4>
-              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, quis.</p>
-              <ul class="list-group">
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature One
-                </li>
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Two
-                </li>
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Three
-                </li>
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Four
-                </li>
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Five
-                </li>
-              </ul>
-              <a href="#" class="btn btn-danger btn-block mt-2">Get It</a>
-            </div>
-            <div class="card-footer text-muted">
-              1 Year Plan
             </div>
           </div>
         </div>
@@ -288,7 +251,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year"></span> Glozzom</p>
+            <span id="year"></span> Osenburg Electric</p>
         </div>
       </div>
     </div>
