--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <title>Bootstrap Theme</title>
+  <title>Osenburg Electric</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Glozzom</a>
+      <a href="index.html" class="navbar-brand">Osenburg Electric</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,9 +30,6 @@
           </li>
           <li class="nav-item">
             <a href="services.html" class="nav-link">Services</a>
-          </li>
-          <li class="nav-item">
-            <a href="blog.html" class="nav-link">Blog</a>
           </li>
           <li class="nav-item active">
             <a href="contact.html" class="nav-link">Contact</a>
@@ -58,59 +55,30 @@
   <section id="contact" class="py-3">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <div class="card p-4">
-            <div class="card-body">
+        <div class="col-md-12">
+          <div class="card text-center">
+            <div class="card-header bg-dark text-white">
               <h4>Get In Touch</h4>
+            </div>
+            <div class="card-body">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, odio!</p>
               <h4>Address</h4>
-              <p>550 Main st, Boston MA</p>
+              <p>2104 Hackney Court,</p>
+              <p>Fallston MD, 21047</p>
               <h4>Email</h4>
-              <p>test@test.com</p>
+              <p><a href="mailto:kosenburg@gmail.com">kosenburg@gmail.com</a></p>
               <h4>Phone</h4>
-              <p>(555) 555-5555</p>
+              <p><a href="tel:4432431134">(443) 243-1134</a></p>
+              <div class="row">
+                <div class="col-md-6">
+                  <a href="mailto:kosenburg@gmail.com" target="_top" class="btn btn-danger btn-block mt-2">Email Us</a>
+                </div>
+                <div class="col-md-6">
+                  <a href="contact.html" class="btn btn-danger btn-block mt-2">Call Us</a>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-8">
-          <div class="card p-4">
-            <div class="card-body">
-              <h3 class="text-center">Please fill out this form to contact us</h3>
-              <hr>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="First Name">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Last Name">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Email">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Phone Number">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <textarea class="form-control" placeholder="Message"></textarea>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <input type="submit" value="Submit" class="btn btn-outline-danger btn-block">
-                  </div>
-                </div>
-              </div>
+            <div class="card-footer text-muted">
             </div>
           </div>
         </div>
@@ -121,30 +89,6 @@
   <!-- STAFF -->
   <section id="staff" class="py-5 text-center bg-dark text-white">
     <div class="container">
-      <h1>Our Staff</h1>
-      <hr>
-      <div class="row">
-        <div class="col-md-3">
-          <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle mb-2">
-          <h4>Jane Doe</h4>
-          <small>Marketing Manager</small>
-        </div>
-        <div class="col-md-3">
-          <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle mb-2">
-          <h4>Sara Williams</h4>
-          <small>Business Manager</small>
-        </div>
-        <div class="col-md-3">
-          <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle mb-2">
-          <h4>John Doe</h4>
-          <small>CEO</small>
-        </div>
-        <div class="col-md-3">
-          <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle mb-2">
-          <h4>Steve Smith</h4>
-          <small>Web Developer</small>
-        </div>
-      </div>
     </div>
   </section>
 
@@ -154,7 +98,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year"></span> Glozzom</p>
+            <span id="year"></span> Osenburg Electric</p>
         </div>
       </div>
     </div>
