Removed all blog remenants as well as changed index page picture to rounded circle.

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,6 @@
       <div class="row">
         <div class="col-md-6 m-auto text-center">
           <h1>Contact Us</h1>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, temporibus?</p>
         </div>
       </div>
     </div>
@@ -61,7 +60,7 @@
               <h4>Get In Touch</h4>
             </div>
             <div class="card-body">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, odio!</p>
+              <p>We are looking forward to hearing from you!</p>
               <h4>Address</h4>
               <p>2104 Hackney Court,</p>
               <p>Fallston MD, 21047</p>
