--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
             <a href="services.html" class="nav-link">Services</a>
           </li>
           <li class="nav-item">
-            <a href="blog.html" class="nav-link">Blog</a>
-          </li>
-          <li class="nav-item">
             <a href="contact.html" class="nav-link">Contact</a>
           </li>
         </ul>
@@ -58,7 +55,7 @@
               <h1 class="display-3">Heading One</h1>
               <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
                 ratione quod aliquid inventore vero perspiciatis.</p>
-              <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a>
+              <a href="services.html" class="btn btn-danger btn-lg">Our Services</a>
             </div>
           </div>
         </div>
@@ -69,7 +66,7 @@
               <h1 class="display-3">Heading Two</h1>
               <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
                 ratione quod aliquid inventore vero perspiciatis.</p>
-              <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+              <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
             </div>
           </div>
         </div>
@@ -80,7 +77,7 @@
               <h1 class="display-3">Heading Three</h1>
               <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
                 ratione quod aliquid inventore vero perspiciatis.</p>
-              <a href="#" class="btn btn-success btn-lg">Learn More</a>
+              <a href="contact.html" class="btn btn-success btn-lg">Contact Us</a>
             </div>
           </div>
         </div>
@@ -143,7 +140,7 @@
           <a href="about.html" class="btn btn-outline-danger btn-lg">Learn More</a>
         </div>
         <div class="col-md-6">
-          <img src="img/DeckStepsResize.jpg" alt="" class="img-fluid">
+          <img src="img/DeckStepsResize.jpg" alt="" class="img-fluid rounded-circle">
         </div>
       </div>
     </div>
@@ -211,18 +208,6 @@
   <!-- NEWSLETTER -->
   <section id="newsletter" class="text-center p-5 bg-dark text-white">
     <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1>Sign Up For Our Newsletter</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio asperiores consectetur, quae ducimus voluptates
-            vero repellendus architecto maiores recusandae mollitia?</p>
-          <form class="form-inline justify-content-center">
-            <input type="text" class="form-control mb-2 mr-2" placeholder="Enter Name">
-            <input type="text" class="form-control mb-2 mr-2" placeholder="Enter Email">
-            <button class="btn btn-primary mb-2">Submit</button>
-          </form>
-        </div>
-      </div>
     </div>
   </section>
 
