Updated site for dad.

--- a/about.html
+++ b/about.html
@@ -31,7 +31,10 @@
             <a href="about.html" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
-            <a href="services.html" class="nav-link">Services</a>
+            <a href="residential.html" class="nav-link">Residential</a>
+          </li>
+          <li class="nav-item">
+            <a href="commercial.html" class="nav-link">Commercial</a>
           </li>
           <li class="nav-item">
             <a href="contact.html" class="nav-link">Contact</a>
