--- a/residential.html
+++ b/residential.html
@@ -29,7 +29,10 @@
             <a href="about.html" class="nav-link">About Us</a>
           </li>
           <li class="nav-item active">
-            <a href="services.html" class="nav-link">Services</a>
+            <a href="residential.html" class="nav-link">Residential</a>
+          </li>
+          <li class="nav-item">
+            <a href="commercial.html" class="nav-link">Commercial</a>
           </li>
           <li class="nav-item">
             <a href="contact.html" class="nav-link">Contact</a>
@@ -54,7 +57,7 @@
   <section id="services" class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
           <div class="card text-center">
             <div class="card-header bg-dark text-white">
               <h3>Residential Services</h3>
@@ -63,6 +66,9 @@
               <h4 class="card-title">Homes</h4>
               <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, quis.</p>
               <ul class="list-group">
+                <li class="list-group-item">
+                  <i class="fas fa-check"></i> New Homes and Additions
+                </li>
                 <li class="list-group-item">
                   <i class="fas fa-check"></i> Pools/Spas
                 </li>
@@ -78,6 +84,12 @@
                 <li class="list-group-item">
                   <i class="fas fa-check"></i> Kitchen Remodels
                 </li>
+                <li class="list-group-item">
+                  <i class="fas fa-check"></i> Audio/Visual Systems
+                </li>
+                <li class="list-group-item">
+                  <i class="fas fa-check"></i> Small jobs, Fans/Lighting/Receptacles
+                </li>
               </ul>
               <a href="contact.html" class="btn btn-danger btn-block mt-2">Contact Us</a>
             </div>
@@ -85,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <div class="card text-center">
             <div class="card-header bg-dark text-white">
               <h3>Commercial Services</h3>
@@ -115,7 +127,7 @@
             <div class="card-footer text-muted">
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
