--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,10 @@
             <a href="about.html" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
-            <a href="services.html" class="nav-link">Services</a>
+            <a href="residential.html" class="nav-link">Residential</a>
+          </li>
+          <li class="nav-item">
+            <a href="commercial.html" class="nav-link">Commercial</a>
           </li>
           <li class="nav-item active">
             <a href="contact.html" class="nav-link">Contact</a>
@@ -65,15 +68,17 @@
               <p>2104 Hackney Court,</p>
               <p>Fallston MD, 21047</p>
               <h4>Email</h4>
-              <p><a href="mailto:kosenburg@gmail.com">kosenburg@gmail.com</a></p>
+              <p><a href="mailto:george@osenburgelectric.com">george@osenburgelectric.com</a></p>
               <h4>Phone</h4>
-              <p><a href="tel:4432431134">(443) 243-1134</a></p>
+              <p><a href="tel:4109352061">(410) 935-2061</a></p>
               <div class="row">
                 <div class="col-md-6">
-                  <a href="mailto:kosenburg@gmail.com" target="_top" class="btn btn-danger btn-block mt-2">Email Us</a>
+                  <a href="mailto:george@osenburgelectric.com" target="_top" class="btn btn-danger btn-block mt-2">Email
+                    Us
+                  </a>
                 </div>
                 <div class="col-md-6">
-                  <a href="contact.html" class="btn btn-danger btn-block mt-2">Call Us</a>
+                  <a href="tel:4109352061" class="btn btn-danger btn-block mt-2">Call Us</a>
                 </div>
               </div>
             </div>
