--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             <a href="about.html" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
-            <a href="services.html" class="nav-link">Services</a>
+            <a href="residential.html" class="nav-link">Residential</a>
+          </li>
+          <li class="nav-item">
+            <a href="commercial.html" class="nav-link">Commercial</a>
           </li>
           <li class="nav-item">
             <a href="contact.html" class="nav-link">Contact</a>
@@ -51,11 +54,11 @@
       <div class="carousel-inner">
         <div class="carousel-item carousel-image-1 active">
           <div class="container">
-            <div class="carousel-caption d-none d-sm-block text-right mb-5">
-              <h1 class="display-3">Heading One</h1>
-              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
-                ratione quod aliquid inventore vero perspiciatis.</p>
-              <a href="services.html" class="btn btn-danger btn-lg">Our Services</a>
+            <div class="carousel-caption d-none d-sm-block text-center mb-5">
+              <h1 class="display-3">Residential</h1>
+              <!-- <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
+                ratione quod aliquid inventore vero perspiciatis.</p> -->
+              <a href="residential.html" class="btn btn-primary btn-lg">Our Services</a>
             </div>
           </div>
         </div>
@@ -63,33 +66,23 @@
         <div class="carousel-item carousel-image-2">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block mb-5">
-              <h1 class="display-3">Heading Two</h1>
-              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
-                ratione quod aliquid inventore vero perspiciatis.</p>
-              <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="carousel-item carousel-image-3">
-          <div class="container">
-            <div class="carousel-caption d-none d-sm-block text-right mb-5">
-              <h1 class="display-3">Heading Three</h1>
-              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
-                ratione quod aliquid inventore vero perspiciatis.</p>
-              <a href="contact.html" class="btn btn-success btn-lg">Contact Us</a>
+              <h1 class="display-3 ">Commercial</h1>
+              <!-- <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
+                ratione quod aliquid inventore vero perspiciatis.</p> -->
+              <a href="commercial.html" class="btn btn-primary btn-lg">Our Services</a>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <a href="#myCarousel" data-slide="prev" class="carousel-control-prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
+    <a href="#myCarousel" data-slide="prev" class="carousel-control-prev">
+      <span class="carousel-control-prev-icon"></span>
+    </a>
 
-      <a href="#myCarousel" data-slide="next" class="carousel-control-next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
+    <a href="#myCarousel" data-slide="next" class="carousel-control-next">
+      <span class="carousel-control-next-icon"></span>
+    </a>
     </div>
   </section>
 
@@ -97,21 +90,21 @@
   <section id="home-icons" class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-home fa-3x mb-2"></i>
+        <div class="col-md-6 mb-4 text-center">
+          <a href="residential.html"><i class="fas fa-home fa-3x mb-2"></i></a>
           <h3>Residential</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
         </div>
-        <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-building fa-3x mb-2"></i>
-          <h3>Commercial</h3>
+        <div class="col-md-6 mb-4 text-center">
+          <a href="commercial.html"><i class="fas fa-building fa-3x mb-2"></i></a>
+          <h3> Commercial</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
         </div>
-        <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-sun fa-3x mb-2"></i>
+        <!-- <div class="col-md-4 mb-4 text-center">
+          <a href="services.html"><i class="fas fa-sun fa-3x mb-2"></i></a>
           <h3>Solar</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -197,12 +190,33 @@
         </div>
 
         <div class="col-md-4">
+          <a href="./img/Smuckers.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
+            <img src="./img/Smuckers.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+      </div>
+
+      <div class="row mb-4">
+        <div class="col-md-4">
+          <a href="./img/CarGarage.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="563">
+            <img src="./img/CarGarage.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+
+        <div class="col-md-4">
+          <a href="./img/DayDeckStairs.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="564">
+            <img src="./img/DayDeckStairs.jpg" alt="" class="img-fluid">
+          </a>
+        </div>
+
+        <div class="col-md-4">
           <a href="./img/SolarGear.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
             <img src="./img/SolarGear.jpg" alt="" class="img-fluid">
           </a>
         </div>
       </div>
     </div>
+
   </section>
 
   <!-- NEWSLETTER -->
