Updated the site pre Dads ideas.

--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
       <div class="row">
         <div class="col-md-6 m-auto text-center">
           <h1>About Us</h1>
+          <p>Osenburg Electric strives to be the best electrical contractor in the Baltimore Metropoliton Area</p>
         </div>
       </div>
     </div>
@@ -60,19 +61,20 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1>What We Do</h1>
+          <h1>Who we are</h1>
+          <br>
           <ul>
             <li>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, fuga eaque. Amet, assumenda aliquid tempore
-                dolorum error eveniet doloribus sed repellat quod, dolores fuga ipsam soluta. Aliquam accusantium pariatur
-                aut sint deleniti laborum ducimus voluptatem? Architecto cumque quod suscipit officiis soluta, voluptate
-                dicta blanditiis similique praesentium temporibus adipisci debitis labore!</p>
+              Family owned and operated since 1992.
             </li>
+            <br>
             <li>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, fuga eaque. Amet, assumenda aliquid tempore
-                dolorum error eveniet doloribus sed repellat quod, dolores fuga ipsam soluta. Aliquam accusantium pariatur
-                aut sint deleniti laborum ducimus voluptatem? Architecto cumque quod suscipit officiis soluta, voluptate
-                dicta blanditiis similique praesentium temporibus adipisci debitis labore!</p>
+              Customer service is our highest priority, with a goal to give each customer a great experience.
+            </li>
+            <br>
+            <li>
+              Let us be your electrical contractor of choice. When it comes to doing the electrically challenging projects, we have master
+              electricians that will do the job right the first time.
             </li>
           </ul>
         </div>
@@ -84,7 +86,7 @@
   </section>
 
   <!-- ICON BOXES -->
-  <section id="icon-boxes" class="p-5">
+  <!-- <section id="icon-boxes" class="p-5">
     <div class="container">
       <div class="row mb-4">
         <div class="col-md-4">
@@ -146,7 +148,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- TESTIMONIALS -->
   <section id="testimonials" class="p-4 bg-dark text-white">
