--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Osenburg Electric</a>
+      <a href="index.html" class="navbar-brand">Osenburg Electric, Inc.</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -66,7 +66,7 @@
         <div class="carousel-item carousel-image-2">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block mb-5">
-              <h1 class="display-3 ">Commercial</h1>
+              <h1 class="display-3 text-mute ">Commercial</h1>
               <!-- <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
                 ratione quod aliquid inventore vero perspiciatis.</p> -->
               <a href="commercial.html" class="btn btn-primary btn-lg">Our Services</a>
@@ -93,7 +93,7 @@
         <div class="col-md-6 mb-4 text-center">
           <a href="residential.html"><i class="fas fa-home fa-3x mb-2"></i></a>
           <h3>Residential</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
+          <p>We are here to help you with all of your electrical needs and projects</p>
         </div>
         <div class="col-md-6 mb-4 text-center">
           <a href="commercial.html"><i class="fas fa-building fa-3x mb-2"></i></a>
@@ -190,8 +190,8 @@
         </div>
 
         <div class="col-md-4">
-          <a href="./img/Smuckers.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
-            <img src="./img/Smuckers.jpg" alt="" class="img-fluid">
+          <a href="./img/OutsideLights.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
+            <img src="./img/OutsideLights.jpg" alt="" class="img-fluid">
           </a>
         </div>
       </div>
@@ -204,14 +204,14 @@
         </div>
 
         <div class="col-md-4">
-          <a href="./img/DayDeckStairs.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="564">
-            <img src="./img/DayDeckStairs.jpg" alt="" class="img-fluid">
+          <a href="./img/Smuckers.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="564">
+            <img src="./img/Smuckers.jpg" alt="" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4">
-          <a href="./img/SolarGear.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
-            <img src="./img/SolarGear.jpg" alt="" class="img-fluid">
+          <a href="./img/OutsideTv.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
+            <img src="./img/OutsideTv.jpg" alt="" class="img-fluid">
           </a>
         </div>
       </div>
