--- a/residential.html
+++ b/residential.html
@@ -48,6 +48,7 @@
       <div class="row">
         <div class="col-md-6 m-auto text-center">
           <h1>Our Services</h1>
+          <p>We are here to help you with all of your electrical needs and projects</p>
         </div>
       </div>
     </div>
